--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="navbar navbar-expand-lg sticky-top py-4" id="cabecalho">
         <div class="container">
-            <h1 class="navbar-brand m-0 section-title">Nome do Restaurante</h1>
+            <h1 class="navbar-brand m-0 section-title">Sabores do Oriente</h1>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -83,16 +83,16 @@
                         <div class="col-md-7 mt-3 mt-md-0">
                             <h3 class="section-title">Sobre <span class="text-colored">o Restaurante</span></h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati natus magni doloremque, recusandae ipsam saepe enim aperiam iusto et iure cupiditate vero, ad deleniti? Dolor pariatur libero repellat tempora.
+                                Bem-vindo ao "Sabores do Oriente", onde a culinária encontra a magia das tradições orientais em cada prato. Em nosso restaurante, buscamos criar uma experiência única para os amantes da gastronomia asiática, oferecendo uma jornada culinária que desperta os sentidos.
                             </p>
                             <h3 class="section-title">Sobre <span class="text-colored">o Espaço</span></h3>
                             <p>
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure magnam saepe quidem voluptas amet consectetur ea. Accusamus sit soluta facere. Deserunt iure eum minus nemo nam minima nobis eligendi quam.
+                                Ao adentrar o "Sabores do Oriente", os clientes são recebidos por uma decoração que evoca a elegância das tradições orientais. Desde a escolha das cores até os detalhes artísticos, cada elemento foi cuidadosamente selecionado para criar um ambiente acolhedor e sofisticado.
                             </p>
                             <ul>
-                                <li>Item 1</li>
-                                <li>Item 2</li>
-                                <li>Item 3</li>
+                                <li>Elagância</li>
+                                <li>Tradição</li>
+                                <li>Cultura</li>
                             </ul>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                             <i class="bi bi-calendar-heart-fill"></i>
                             Aniversários
                         </h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur necessitatibus atque, ad, quisquam excepturi est, nobis deserunt sint tempora earum cupiditate perspiciatis minima accusamus maiores architecto voluptates cumque et.</p>
+                        <p>No "Sabores do Oriente", tornamos cada aniversário único. Com decoração personalizada e um menu adaptado, garantimos uma celebração memorável, onde a hospitalidade excepcional encontra uma culinária extraordinária. Torne seu aniversário inesquecível conosco.</p>
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <img src="./assets/eventos/casamento.jpg" class="d-block w-100 rounded mb-2">
@@ -119,7 +119,7 @@
                             <i class="bi bi-arrow-through-heart-fill"></i>
                             Recepção para casamentos
                         </h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur necessitatibus atque, ad, quisquam excepturi est, nobis deserunt sint tempora earum cupiditate perspiciatis minima accusamus maiores architecto voluptates cumque et.</p>
+                        <p>No "Sabores do Oriente", transformamos casamentos em experiências inesquecíveis. Com um serviço personalizado, decoração encantadora e um cardápio adaptado, oferecemos celebrações únicas. Nossa equipe dedicada e a atmosfera sofisticada garantem momentos especiais e uma culinária excepcional. Celebre o amor conosco no "Sabores do Oriente".</p>
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <img src="./assets/eventos/confraternizacoes.jpg" class="d-block w-100 rounded mb-2">
@@ -127,7 +127,7 @@
                             <i class="bi bi-people-fill"></i>
                             Confraternizações
                         </h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequuntur necessitatibus atque, ad, quisquam excepturi est, nobis deserunt sint tempora earum cupiditate perspiciatis minima accusamus maiores architecto voluptates cumque et.</p>
+                        <p>No "Sabores do Oriente", tornamos as confraternizações momentos extraordinários. Com serviço personalizado, decoração envolvente e um cardápio adaptado, oferecemos celebrações memoráveis. Nossa equipe dedicada e ambiente acolhedor garantem uma experiência única para eventos corporativos ou encontros especiais. Desfrute de momentos de confraternização excepcionais no "Sabores do Oriente".</p>
                     </div>
                 </div>
             </div>
